--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 This program assumes linux and ruby >= 2.3.
 
 bin/main.rb to run interactively, rspec to run tests.
+
+The computer plaer uses a simple minimax algorithm with a-b pruning and a naive heuristic. I have set the iteration depth fairly low so that boards size 4 and up will run in reasonable time, but this sacrifices optimal play on a 3-grid. To change this, modify the constant AB_DEPTH in lib/tac.rb to a higher value.
+
+Input moves as row,column. e.g. 0,1
